Imrpoved messages organisation. Added a file just for menus. Added startup message. Added warp configurations (/warpset). Added home configurations.